# blakia-agent-launchpad

./: .coveragerc  .dockerignore  .env.example  .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: test.yaml
api/adapters/: index.html
api/core/: index.html
api/infra/: index.html
api/memory/: index.html
api/ports/: index.html
docs/: index.md
docs/api/: adapters.md  core.md  infra.md  memory.md  ports.md
src/adapters/generic_webhook/: handler.py
src/adapters/telegram/: handler.py
src/adapters/whatsapp_business/: cards.py  catalog.py  client.py  handler.py  models.py  sender.py
src/core/: agents.py  deps.py  graph.py
src/core/memory/: __init__.py  codec.py  in_memory.py  manager.py  processors.py  redis_history.py  redis_store.py
src/core/tools/: dummy.py
src/infrastructure/: server.py  settings.py
src/observability/langfuse/: configure.py  tracing.py
src/ports/: message_handler.py  messages.py  outbound.py
tests/: .gitignore  conftest.py  test_codec_edges.py  test_in_memory_edges.py  test_memory_store.py  test_redis_store.py  test_redis_store_exit.py  test_smoke_core.py
tests/e2e/smoke/: conftest.py  test_webhook_generic_smoke.py
tests/integration/api/: test_ops_endpoints_it.py
tests/integration/redis/: test_redis_history_edgecases_it.py
tests/unit/: conftest.py
tests/unit/core/: test_agent.py
tests/unit/graph/: test_graph.py
tests/unit/memory/: test_memory_factory.py  (+1 more)
(+2 files in other folders)
